--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "vb-insight-ui",
   "description": "An open-source frontend for the Insight API. The Insight API provides you with a convenient, powerful and simple way to query and broadcast data on the bitcoin network and build your own services with it.",
-  "version": "0.4.0",
-  "repository": "git://github.com/vaultbank/insight-ui.git",
+  "version": "1.0.1",
   "contributors": [
     {
       "name": "Matias Alejo Garcia",
@@ -26,9 +25,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/bitpay/insight-ui/issues"
+    "url": "https://github.com/vaultbank/insight-ui/issues"
   },
-  "homepage": "https://github.com/bitpay/insight-ui",
+  "homepage": "https://github.com/vaultbank/insight-ui",
   "license": "MIT",
   "keywords": [
     "insight",
